# Isconna

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.adoc
.github/workflows/: Test.Demo.yml
example/: Demo.cpp  Experiment.Accuracy.cpp  Experiment.Efficiency.cpp  Experiment.Scalability.Column.cpp  Experiment.Scalability.Edge.cpp  Experiment.Scalability.Row.cpp
include/: ACore.h  ACore.hpp  EdgeNodeCore.hpp  EdgeOnlyCore.hpp
src/: CountMinSketch.hpp  EdgeNodeCore.hpp  EdgeOnlyCore.hpp
